--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+social = [
+    "httpx>=0.27.0",
+    "Pillow>=10.0.0",
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
