--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ social = [
     "httpx>=0.27.0",
     "Pillow>=10.0.0",
 ]
+trello = [
+    "httpx>=0.27.0",
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
